[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/GravityBold8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://theme/Main.tres" type="Theme" id=2]
[ext_resource path="res://sounds/paddle_bounce.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/wall_bounce.wav" type="AudioStream" id=4]
[ext_resource path="res://MainMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 260.0
margin_top = 50.0
margin_right = 540.0
margin_bottom = 450.0
size_flags_horizontal = 4
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
margin_right = 280.0
margin_bottom = 204.0
custom_constants/margin_right = 0
custom_constants/margin_top = 50
custom_constants/margin_left = 0
custom_constants/margin_bottom = 50

[node name="TitlePanel" type="PanelContainer" parent="VBoxContainer2/MarginContainer"]
margin_top = 50.0
margin_right = 280.0
margin_bottom = 154.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/MarginContainer/TitlePanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 270.0
margin_bottom = 94.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Title" type="Label" parent="VBoxContainer2/MarginContainer/TitlePanel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "Pong"
align = 1
valign = 1

[node name="Play1PButton" type="Button" parent="VBoxContainer2"]
margin_top = 224.0
margin_right = 280.0
margin_bottom = 256.0
focus_neighbour_top = NodePath("../OptionsButton")
theme = ExtResource( 2 )
text = "Play 1P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play2PButton" type="Button" parent="VBoxContainer2"]
margin_top = 276.0
margin_right = 280.0
margin_bottom = 308.0
theme = ExtResource( 2 )
text = "Play 2P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="VBoxContainer2"]
margin_top = 328.0
margin_right = 280.0
margin_bottom = 360.0
focus_neighbour_bottom = NodePath("../Play1PButton")
theme = ExtResource( 2 )
disabled = true
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHoverAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ButtonPressAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="focus_entered" from="VBoxContainer2/Play1PButton" to="." method="_on_Button_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer2/Play1PButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/Play1PButton" to="." method="_on_Play1PButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer2/Play2PButton" to="." method="_on_Button_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer2/Play2PButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/Play2PButton" to="." method="_on_Play2PButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer2/OptionsButton" to="." method="_on_Button_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer2/OptionsButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="finished" from="ButtonPressAudio" to="." method="_on_ButtonPressAudio_finished"]
